<resources>
    <string name="app_name">Energy Automation Control</string>
    <string name="textview">TextView</string>
    <string name="energy_control">Energy Automation Control</string>
    <string name="todo">TODO</string>
    <string name="heating_on">Heating On?</string>
    <string name="ct">25</string>
    <string name="tt">25</string>
    <string name="about">About</string>
    <string name="file_a_support_ticket">File a Support Ticket</string>
    <string name="contact">Contact</string>
    <string name="Contact">Contact</string>
    <string name="Support">Support</string>
    <string name="About">About</string>
    <string name="appver">1.0 (Beta)</string>
    <string name="info_app">App Version</string>
    <string name="info">Info</string>
    <string name="info_a3"> - Jonathan Perez - CN (NTU)</string>
    <string name="info_a2"> - Puneet Arora - CN (NTU)</string>
    <string name="info_a1"> - Kyle Taylor - Comp Sys (NTU)</string>
    <string name="info_dev">App Developers</string>
    <string name="info_devin">This app was developed by:</string>
    <string name="contcall">Call Us</string>
    <string name="contemail">Email Us</string>
    <string name="contemailin">Feel free to contact one of the following email addresses:</string>
    <string name="contemailp1"> - N0741061.ntu.ac.uk (Kyle)</string>
    <string name="contemailp2"> - T0072947@my.ntu.ac.uk (Puneet)</string>
    <string name="contemailp3"> - N0753746@my.ntu.ac.uk (Jonathan)</string>
    <string name="contcallno">You can call us on: ???????????</string>
    <string name="posfeedback">Positive</string>
    <string name="negfeedback">Negative</string>
    <string name="ideafeedback">Idea</string>
    <string name="bugfeedback">Bug(s) to squish</string>
    <string name="otherfeedback">Other</string>
    <string name="description">Fill out the form below and click submit:</string>
    <string name="firstname">Enter first name</string>
    <string name="lastname">Enter last name</string>
    <string name="email">Enter email address</string>
    <string name="feedbacktype">Chooese feedback type</string>
    <string name="feedbackinfo">Enter feedback</string>
    <string name="submitbutton">Submit</string>
    <string name="title_activity_login">Sign in</string>
    <string name="enteremail">Enter email address</string>
    <string name="enterpassw">Enter password</string>
    <string name="loginbutton">Login</string>
    <string name="registerbutton">register</string>
    <string name="signout">Sign Out</string>
</resources>
