<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SupTicketActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/FormDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/FirstName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/LastName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/options"
                android:prompt="@string/feedbacktype" />

            <EditText
                android:id="@+id/feedbacktext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feedbackinfo"
                android:inputType="textMultiLine"
                android:lines="4"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/submitbutton"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="submitFeedback"
                android:text="@string/submitbutton" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>