<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TempActivity">

    <View
        android:id="@+id/view"
        android:layout_width="171dp"
        android:layout_height="169dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="46dp"
        android:layout_height="169dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/therm" />

    <TextView
        android:id="@+id/curtempt"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/ct"
        android:textColor="@android:color/black"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/targtemp"
        android:layout_width="171dp"
        android:layout_height="170dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/tt"
        android:textSize="130sp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="71dp"
        android:contentDescription="@string/todo"
        android:onClick="takeone"
        app:layout_constraintEnd_toStartOf="@+id/targtemp"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="71dp"
        android:contentDescription="@string/todo"
        android:onClick="addone"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/targtemp"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <View
        android:id="@+id/view2"
        android:layout_width="331dp"
        android:layout_height="194dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/HeatOnOff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <CheckBox
        android:id="@+id/HeatOnOff"
        android:layout_width="163dp"
        android:layout_height="32dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:checked="false"
        android:text="@string/heating_on"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/voiceButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_btn_speak_now" />

</android.support.constraint.ConstraintLayout>